@@ -221,10 +221,9 @@ static int	parse_list_of_checks(char *str)
 	if (0 != strcmp(tmp, ZBX_PROTO_VALUE_SUCCESS))
 	{
 		if (SUCCEED == zbx_json_value_by_name(&jp, ZBX_PROTO_TAG_INFO, tmp, sizeof(tmp)))
-			zabbix_log(LOG_LEVEL_WARNING, "No active checks on server: %s",
-					tmp);
+			zabbix_log(LOG_LEVEL_WARNING, "no active checks on server: %s", tmp);
 		else
-			zabbix_log(LOG_LEVEL_WARNING, "No active checks on server");
+			zabbix_log(LOG_LEVEL_WARNING, "no active checks on server");
 		return FAIL;
 	}
 
@@ -241,8 +240,7 @@ static int	parse_list_of_checks(char *str)
 
 		if (SUCCEED != zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_KEY, name, sizeof(name)) || '\0' == *name)
 		{
-			zabbix_log(LOG_LEVEL_WARNING, "Unable to retrieve value of tag \"%s\"",
-					ZBX_PROTO_TAG_KEY);
+			zabbix_log(LOG_LEVEL_WARNING, "unable to retrieve value of tag \"%s\"", ZBX_PROTO_TAG_KEY);
 			continue;
 		}
 
@@ -251,8 +249,7 @@ static int	parse_list_of_checks(char *str)
 
 		if (SUCCEED != zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_DELAY, tmp, sizeof(tmp)) || '\0' == *tmp)
 		{
-			zabbix_log(LOG_LEVEL_WARNING, "Unable to retrieve value of tag \"%s\"",
-					ZBX_PROTO_TAG_DELAY);
+			zabbix_log(LOG_LEVEL_WARNING, "unable to retrieve value of tag \"%s\"", ZBX_PROTO_TAG_DELAY);
 			continue;
 		}
 
@@ -261,15 +258,14 @@ static int	parse_list_of_checks(char *str)
 		if (SUCCEED != zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_LOGLASTSIZE, tmp, sizeof(tmp)) ||
 				SUCCEED != is_uint64(tmp, &lastlogsize))
 		{
-			zabbix_log(LOG_LEVEL_WARNING, "Unable to retrieve value of tag \"%s\"",
+			zabbix_log(LOG_LEVEL_WARNING, "unable to retrieve value of tag \"%s\"",
 					ZBX_PROTO_TAG_LOGLASTSIZE);
 			continue;
 		}
 
 		if (SUCCEED != zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_MTIME, tmp, sizeof(tmp)) || '\0' == *tmp)
 		{
-			zabbix_log(LOG_LEVEL_WARNING, "Unable to retrieve value of tag \"%s\"",
-					ZBX_PROTO_TAG_MTIME);
+			zabbix_log(LOG_LEVEL_WARNING, "unable to retrieve value of tag \"%s\"", ZBX_PROTO_TAG_MTIME);
 			mtime = 0;
 		}
 		else
@@ -294,19 +290,20 @@ static int	parse_list_of_checks(char *str)
 
 			if (SUCCEED != zbx_json_value_by_name(&jp_row, "name", name, sizeof(name)))
 			{
-				zabbix_log(LOG_LEVEL_WARNING, "Unable to retrieve value of tag \"%s\"", "name");
+				zabbix_log(LOG_LEVEL_WARNING, "unable to retrieve value of tag \"%s\"", "name");
 				continue;
 			}
 
 			if (SUCCEED != zbx_json_value_by_name(&jp_row, "expression", expression, sizeof(expression)) || '\0' == *expression)
 			{
-				zabbix_log(LOG_LEVEL_WARNING, "Unable to retrieve value of tag \"%s\"",	"expression");
+				zabbix_log(LOG_LEVEL_WARNING, "unable to retrieve value of tag \"%s\"",	"expression");
 				continue;
 			}
 
 			if (SUCCEED != zbx_json_value_by_name(&jp_row, "expression_type", tmp, sizeof(tmp)) || *tmp == '\0')
 			{
-				zabbix_log(LOG_LEVEL_WARNING, "Unable to retrieve value of tag \"%s\"",	"expression_type");
+				zabbix_log(LOG_LEVEL_WARNING, "unable to retrieve value of tag \"%s\"",
+						"expression_type");
 				continue;
 			}
 
@@ -314,7 +311,8 @@ static int	parse_list_of_checks(char *str)
 
 			if (SUCCEED != zbx_json_value_by_name(&jp_row, "exp_delimiter", tmp, sizeof(tmp)))
 			{
-				zabbix_log(LOG_LEVEL_WARNING, "Unable to retrieve value of tag \"%s\"",	"exp_delimiter");
+				zabbix_log(LOG_LEVEL_WARNING, "unable to retrieve value of tag \"%s\"",
+						"exp_delimiter");
 				continue;
 			}
 
@@ -322,7 +320,7 @@ static int	parse_list_of_checks(char *str)
 
 			if (SUCCEED != zbx_json_value_by_name(&jp_row, "case_sensitive", tmp, sizeof(tmp)) || '\0' == *tmp)
 			{
-				zabbix_log(LOG_LEVEL_WARNING, "Unable to retrieve value of tag \"%s\"",
+				zabbix_log(LOG_LEVEL_WARNING, "unable to retrieve value of tag \"%s\"",
 						"case_sensitive");
 				continue;
 			}
@@ -366,7 +364,7 @@ static int	refresh_active_checks(const char *host, unsigned short port)
 	struct zbx_json	json;
 	static int	last_ret = SUCCEED;
 
-	zabbix_log(LOG_LEVEL_DEBUG, "refresh_active_checks('%s',%u)", host, port);
+	zabbix_log(LOG_LEVEL_DEBUG, "refresh_active_checks() host:'%s' port:%hu", host, port);
 
 	zbx_json_init(&json, ZBX_JSON_STAT_BUF_LEN);
 
@@ -400,6 +398,12 @@ static int	refresh_active_checks(const char *host, unsigned short port)
 			if (SUCCEED == (ret = SUCCEED_OR_FAIL(zbx_tcp_recv_ext(&s, &buf, ZBX_TCP_READ_UNTIL_CLOSE, 0))))
 			{
 				zabbix_log(LOG_LEVEL_DEBUG, "got [%s]", buf);
+
+				if (SUCCEED != last_ret)
+				{
+					zabbix_log(LOG_LEVEL_WARNING, "active check configuration update from [%s:%hu]"
+							" is working again", host, port);
+				}
 				parse_list_of_checks(buf);
 			}
 		}
@@ -407,19 +411,11 @@ static int	refresh_active_checks(const char *host, unsigned short port)
 		zbx_tcp_close(&s);
 	}
 
-	if (last_ret != ret)
+	if (SUCCEED != ret && SUCCEED == last_ret)
 	{
-		if (SUCCEED != ret)
-		{
-			zabbix_log(LOG_LEVEL_WARNING,
-					"active check configuration update from [%s:%u] started to fail (%s)",
-					host, port, zbx_tcp_strerror());
-		}
-		else
-		{
-			zabbix_log(LOG_LEVEL_WARNING, "active check configuration update from [%s:%u] is working again",
-					host, port);
-		}
+		zabbix_log(LOG_LEVEL_WARNING,
+				"active check configuration update from [%s:%hu] started to fail (%s)",
+				host, port, zbx_tcp_strerror());
 	}
 
 	last_ret = ret;
@@ -597,7 +593,8 @@ static int	send_buffer(const char *host, unsigned short port)
 		buffer.lastsent = now;
 		if (0 != buffer.first_error)
 		{
-			zabbix_log(LOG_LEVEL_WARNING, "active check data upload to [%s:%u] is working again", host, port);
+			zabbix_log(LOG_LEVEL_WARNING, "active check data upload to [%s:%hu] is working again",
+					host, port);
 			buffer.first_error = 0;
 		}
 	}
@@ -605,7 +602,7 @@ static int	send_buffer(const char *host, unsigned short port)
 	{
 		if (0 == buffer.first_error)
 		{
-			zabbix_log(LOG_LEVEL_WARNING, "active check data upload to [%s:%u] started to fail (%s%s)",
+			zabbix_log(LOG_LEVEL_WARNING, "active check data upload to [%s:%hu] started to fail (%s%s)",
 					host, port, err_send_step, zbx_tcp_strerror());
 			buffer.first_error = now;
 		}
@@ -878,7 +875,7 @@ static void	process_active_checks(char *server, unsigned short port)
 			if (FAIL == ret)
 			{
 				active_metrics[i].status = ITEM_STATUS_NOTSUPPORTED;
-				zabbix_log(LOG_LEVEL_WARNING, "Active check [%s] is not supported. Disabled.",
+				zabbix_log(LOG_LEVEL_WARNING, "active check \"%s\" is not supported",
 						active_metrics[i].key);
 
 				process_value(server, port, CONFIG_HOSTNAME,
@@ -983,7 +980,7 @@ static void	process_active_checks(char *server, unsigned short port)
 			if (FAIL == ret)
 			{
 				active_metrics[i].status = ITEM_STATUS_NOTSUPPORTED;
-				zabbix_log(LOG_LEVEL_WARNING, "Active check [%s] is not supported. Disabled.",
+				zabbix_log(LOG_LEVEL_WARNING, "active check \"%s\" is not supported",
 						active_metrics[i].key);
 
 				process_value(server, port, CONFIG_HOSTNAME,
@@ -1123,7 +1120,7 @@ static void	process_active_checks(char *server, unsigned short port)
 			if (FAIL == ret)
 			{
 				active_metrics[i].status = ITEM_STATUS_NOTSUPPORTED;
-				zabbix_log(LOG_LEVEL_WARNING, "Active check [%s] is not supported. Disabled.",
+				zabbix_log(LOG_LEVEL_WARNING, "active check \"%s\" is not supported",
 						active_metrics[i].key);
 
 				process_value(server, port, CONFIG_HOSTNAME,
@@ -1149,7 +1146,7 @@ static void	process_active_checks(char *server, unsigned short port)
 				if (0 == strcmp(*pvalue, ZBX_NOTSUPPORTED))
 				{
 					active_metrics[i].status = ITEM_STATUS_NOTSUPPORTED;
-					zabbix_log(LOG_LEVEL_WARNING, "Active check [%s] is not supported. Disabled.",
+					zabbix_log(LOG_LEVEL_WARNING, "active check \"%s\" is not supported",
 							active_metrics[i].key);
 				}
 			}
