@@ -3,6 +3,7 @@ Changes for 2.0.9rc1
 New features:
 
 Bug fixes:
+...G...... [ZBXNEXT-1056] improved active checks error messages (wiper)
 
 --------------------------------------------------------------------------------
 Changes for 2.0.8
